--- a/data.qmd
+++ b/data.qmd
@@ -1,6 +1,11 @@
 ---
 title: "{{< bi bar-chart-line-fill >}} Data"
-format: html
 ---
+
+<style>
+  body, html {
+    overflow: hidden;
+  }
+</style>
 
 As data are compiled for our projects, they will be posted here.
