--- a/index.qmd
+++ b/index.qmd
@@ -1,12 +1,38 @@
----
-about:
-  template: trestles
-  image: /assets/images/2023_oleson-lab_group-photo.jpg
-  image-width: "5.6in"
-  image-shape: rectangle
----
+<style>
+  body {
+    background-image: url("https://images.pexels.com/photos/4321473/pexels-photo-4321473.jpeg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    overflow: hidden; /* Prevent scrolling */
+    height: 100vh; /* Full height of the viewport */
+    margin: 0; /* Remove default margin */
+  }
 
-<br><h1 class='title' id='custom-title'>
+  .index-center {
+    background-color: rgba(0, 126, 147, 0.5); /* Background color */
+    padding: 28px; /* Adjust the value as needed */
+    border-radius: 15px; /* Adjust the value as needed for roundness */
+    border: 1px solid rgba(232, 232, 232, 1); /* Apply border to all sides */
+    border-top: 1px solid rgba(232, 232, 232, 1); /* Top border style */
+  }
+
+  .footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1; /* Ensure the footer is on top of the fixed body */
+    border: 1px solid rgba(255, 255, 255, 1) !important; /* White border */
+  }
+</style>
+
+::: columns
+::: {.column width="12.5%"}
+:::
+
+::: {.column width="75%"}
+<br><br><center class="index-center">
+<h1 class='title' id='custom-title'>
 Welcome! E komo mai!
 </h1>
 
@@ -15,3 +41,9 @@ Thank you for visiting the site of the Oleson Ecological Economics lab within th
 We are a diverse and interdisciplinary group interested in developing management-relevant analyses and tools.
 We focus on natural resource and environmental management problems spanning the mountain top to the coral reef.
 We employ a multitude of approaches, from quantification and valuation of ecosystem goods and services, data-driven and participatory modeling, value chain analysis, alternative economic welfare indicators, policy analysis, and decision science.
+</center>
+:::
+
+::: {.column width="12.5%"}
+:::
+:::
