--- a/research.qmd
+++ b/research.qmd
@@ -1,7 +1,12 @@
 ---
 title: "{{< bi search >}} Research"
-format: html
 ---
+
+<style>
+  body, html {
+    overflow: hidden;
+  }
+</style>
 
 ## Themes
 
@@ -11,7 +16,7 @@ My group currently has a number of interdisciplinary projects under three resear
 
 ### {{< bi lightbulb-fill >}} 
 
-<h4 class="highlight-color">Social-ecological systems modeling, valuation, and decision science</h4>
+<h4>Social-ecological systems modeling, valuation, and decision science</h4>
 
 How will environmental changes (i.e., land use change, climate change, ocean acidification, invasive species) impact the ecosystem goods and services provided by Hawaiʻi’s ecosystems, and what are the consequence for human wellbeing?
 
@@ -19,13 +24,13 @@ How do land management practices affecting erosion, groundwater recharge, and wa
 
 ### {{< bi currency-dollar >}} 
 
-<h4 class="highlight-color">Natural capital and green accounting</h4>
+<h4>Natural capital and green accounting</h4>
 
 What is the true progress of Hawaii, measured using the Genuine Progress Indicator? What stocks of natural capital does Hawaii have, and what ecosystem services flow from these?
 
 ### {{< bi water >}} 
 
-<h4 class="highlight-color">Marine management</h4>
+<h4>Marine management</h4>
 
 What are the socio-economic impacts of Palau’s National Marine Sanctuary?
 
